--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --debiblue: #003b80;
+    --text: #2b73ff;
   }
 }
 
@@ -24,3 +26,6 @@ body {
 html {
   scroll-behavior: smooth;
 }
+
+
+#003b80
