--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,8 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
-    --debiblue: #003b80;
+    --darkblue: #003b80;
+    --debiblue: #69baff;
     --text: #2b73ff;
   }
 }
@@ -26,6 +27,3 @@ body {
 html {
   scroll-behavior: smooth;
 }
-
-
-#003b80
