image update, pink theme update, animation update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,9 +5,9 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --darkblue: #003b80;
-  --debiblue: #69baff;
-  --text: #2b73ff;
+  --darkblue: #A66060;
+  --debiblue: #D9BEB4;
+  --text: #BF9B93;
 
   /* Extended blue shades */
   --blue-100: #e6f3ff;
